[workspace]
members = [ "stats-manager",
  "stats-reporter"
]

[workspace.dependencies]
reqwest = { version="0.11.25", default-features = false, features = ["rustls-tls"] }
sysinfo = "0.30.7"
tokio = { version = "1.36.0", features = ["full"] }
axum = "0.7.4"
tracing-subscriber = "0.3.18"
serde = { version="1.0.197", features = ["derive"] }
