[workspace]
members = [
  "stats-manager",
  "stats-reporter"
]

[workspace.dependencies]
sysinfo = "0.30.7"
tokio = { version = "1.36.0", features = ["full"] }
axum = "0.7.4"
tracing-subscriber = "0.3.18"
serde = { version="1.0.197", features = ["derive"] }
serde_json = "1.0.114"

[workspace.package]
version = "0.1.0"
edition = "2021"
