[package]
name = "stats-manager"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
axum.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
