[package]
name = "stats-reporter"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
sysinfo.workspace = true
serde.workspace = true
serde_json.workspace = true

reqwest = { version="0.11.25", default-features = false, features = ["rustls-tls", "json"] }
hostname = "0.3.1"
